# onyx-dp-nlp-category-api

./: .env.local  .gitignore  .gitlab-ci.yml  .safety-policy.yml  Cargo.toml  Dockerfile  Dockerfile.concourse  Dockerfile.ff_data  Dockerfile.in  Dockerfile.old  Dockerfile.wheels  LICENSE  Makefile  README.md  api.py  config.py  docker-compose.yml  dp-nlp-category-api.nomad  gunicorn_config.py  pyproject.toml  requirements-dev.txt  settings.py  setup.cfg  setup.py  swagger.yaml  taxonomy.json  translate_cache.py
api/: pyproject.toml
api/ff_fasttext_api/: server.py
api/ff_fasttext_api/scripts/: ff_fasttext.py
api/tests/api/ff_fasttext_api/scripts/: ff_fasttext_test.py
api/tests/ff_fasttext_api/: server_test.py
api/tests/ff_fasttext_api/scripts/: ff_fasttext_test.py
category_api/: app.py  data.py  healthcheck.py  logger.py  main.py  routes.py  server.py  settings.py
category_api/scripts/: category_cli.py
ci/: audit-allow-list.json  audit.yml  build.yml  component.yml  lint.yml  unit.yml
ci/scripts/: audit.sh  build.sh  component.sh  deps.sh  lint.sh  unit.sh
core/: Cargo.toml  LICENSE.md  pyproject.toml
core/ff_fasttext/: __init__.py  category_manager.py  extract.py  settings.py  taxonomy.py  utils.py
core/src/: lib.rs  main.rs
ff_fasttext/: __init__.py  extract.py  server.py  taxonomy.py
ff_fasttext_api/: config.py  healthcheck.py  logger.py  main.py  server.py  settings.py
ff_fasttext_api/scripts/: ff_fasttext.py
src/: lib.rs
test_data/: .gitignore  foo-cache.json
tests/: conftest.py  settings.yaml
tests/api/: server_test.py
tests/api/scripts/: category_cli_test.py  ff_fasttext_test.py
tests/unit/: data_test.py  gunicorn_test.py  settings_test.py
